[package]
name = "csaf"
description = "An implementation of the Common Security Advisory Framework (CSAF)"
keywords    = ["security", "advisory", "vulnerability"]
categories = ["parser-implementations"]
version = "0.4.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Blake Johnson"]
license = "MIT"
repository = "https://github.com/voteblake/csaf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
cvss = { version = "1", features = ["serde"] }
rustsec = { version = "0.25", optional = true }
# Has to be kept in sync with version used by rustsec
crates-index = { version = "0.17", optional = true }
serde_with = "2"
packageurl = "0.3"
cpe = "0.1.2"


[features]
default = ["rustsec-interop"]
rustsec-interop = ["rustsec", "crates-index"]

[dev-dependencies]
serde_json = "1"
