[package]
name = "csaf"
description = "An implementation of the Common Security Advisory Framework (CSAF)"
keywords    = ["security", "advisory", "vulnerability"]
categories = ["parser-implementations"]
version = "0.5.0"
edition = "2021"
# When changing, also update .github/workflows/check.yml for CI MSRV check
rust-version = "1.64.0"
authors = ["Blake Johnson"]
license = "MIT"
repository = "https://github.com/voteblake/csaf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
cvss = { version = "2", features = ["serde"] }
serde_json = "1"
serde_with = "3"
packageurl = "0.3"
cpe = "0.1.2"
tempfile = "3"

# rustsec is pinned as we need to ensure we use the same version of crates-index
# rustsec will update crates-index in patch version releases
rustsec = { version = "=0.27.0", optional = true }
crates-index = { version = "2.2", optional = true }

[features]
default = ["rustsec-interop"]
rustsec-interop = ["rustsec", "crates-index"]

[dev-dependencies]
serde_json = "1"
